[ master ] - Updated 'Install OpenBSD' chatper and added 'Install X' chapter.

--- a/README.org
+++ b/README.org
@@ -1,3 +1,6 @@
 * My =OpenBSD= handbook
 
 ** [[file:chapters/install-openbsd.org][Install OpenBSD]]
+** Install =DE (Desktop Environment)= or =WM (Window Manager)=
+*** [[file:chapters/install-x.org][Install X]]
+
